[gd_scene load_steps=7 format=3 uid="uid://bcca6jkixsjot"]

[ext_resource type="Script" path="res://Scripts/defender.gd" id="1_27smn"]

[sub_resource type="CylinderMesh" id="CylinderMesh_mdoye"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yrmax"]
albedo_color = Color(0.333333, 0.509804, 1, 1)

[sub_resource type="PrismMesh" id="PrismMesh_e8a6g"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pfmtc"]
size = Vector3(1.33228, 0.163086, 1.33289)

[sub_resource type="SphereShape3D" id="SphereShape3D_klsg8"]
radius = 10.0

[node name="Defender" type="StaticBody3D"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
script = ExtResource("1_27smn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CylinderMesh_mdoye")
surface_material_override/0 = SubResource("StandardMaterial3D_yrmax")

[node name="MarkerToAim" type="Marker3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.371989, -1.19597)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.41085, -0.617782)
mesh = SubResource("PrismMesh_e8a6g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00280762, 0.0782235, 0.00140381)
shape = SubResource("BoxShape3D_pfmtc")

[node name="EnemyDetector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyDetector"]
shape = SubResource("SphereShape3D_klsg8")

[node name="BulletContainer" type="Node" parent="."]

[node name="ShootingCoolDown" type="Timer" parent="."]

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_enemy_detector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_enemy_detector_body_exited"]
[connection signal="timeout" from="ShootingCoolDown" to="." method="_on_shooting_cool_down_timeout"]
